<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".actDetalheProposta">


    //header

    <RelativeLayout
        android:id="@+id/llIdHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="visible">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/btnCompartilhar"
            android:layout_width="@dimen/actDetalheProposta_widthBtnCompartilhar"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="compartilhar"
            android:text="@string/act_detalhe_proposta_btnCompartilhar"
            android:visibility="invisible" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/btnInteiroTeor"
            android:layout_width="@dimen/actDetalheProposta_widthBtnInteiroTeor"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackground"
            android:onClick="inteiroTeor"
            android:text="@string/act_detalhe_proposta_btnInteiroTeor"
            android:textAlignment="textEnd" />

    </RelativeLayout>


    //footer

    <RelativeLayout
        android:id="@+id/llIdFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/tvIdLabelVotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnAprovar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="23dp"
            android:background="@color/cinza_claro"
            android:text="@string/act_detalhe_proposta_labelVotacao"
            android:textSize="@dimen/actDetalheProposta_textSizeLabel"
            android:textStyle="bold" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/btnAprovar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/green_button"
            android:onClick="votoAprovar"
            android:text="@string/act_detalhe_proposta_btnAprovar"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/btnReprovar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnAprovar"
            android:layout_alignBottom="@+id/btnAprovar"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/red_button"
            android:onClick="votoReprovar"
            android:text="@string/act_detalhe_proposta_btnReprovar"
            android:textColor="@android:color/white"
            android:textSize="24sp" />


    </RelativeLayout>


    //Body

    <ScrollView
        android:id="@+id/svIdContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:layout_marginTop="40dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvIdTituloProjeto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Título"
                android:textSize="@dimen/actDetalheProposta_textSizeTituloProjeto"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdLabelDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdTituloProjeto"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/cinza_claro"
                android:text="@string/act_detalhe_proposta_labelDescricao"
                android:textSize="@dimen/actDetalheProposta_textSizeLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdLabelDescricao"
                android:text="" />

            <TextView
                android:id="@+id/tvIdLabelPeriodoVotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdDescricao"
                android:layout_marginTop="14dp"
                android:background="@color/cinza_claro"
                android:text="@string/act_detalhe_proposta_labelPeriodoVotacao"
                android:textSize="@dimen/actDetalheProposta_textSizeLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdLabelInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdLabelPeriodoVotacao"
                android:layout_marginRight="@dimen/actDetalheProposta_espacamento_label_texto"
                android:layout_marginTop="16dp"
                android:text="@string/act_detalhe_proposta_labelInicio" />

            <TextView
                android:id="@+id/tvIdInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvIdLabelInicio"
                android:layout_toEndOf="@+id/tvIdLabelInicio"
                android:layout_toRightOf="@+id/tvIdLabelInicio" />

            <TextView
                android:id="@+id/tvIdLabelTermino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdLabelInicio"
                android:layout_marginRight="@dimen/actDetalheProposta_espacamento_label_texto"
                android:layout_marginTop="11dp"
                android:text="@string/act_detalhe_proposta_labelTermino" />

            <TextView
                android:id="@+id/tvIdTermino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvIdLabelTermino"
                android:layout_toEndOf="@+id/tvIdLabelTermino"
                android:layout_toRightOf="@+id/tvIdLabelTermino" />


            //RESUMO DA VOTACAO

            <TextView
                android:id="@+id/tvIdLabelResumoVotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdTermino"
                android:layout_marginTop="14dp"
                android:background="@color/cinza_claro"
                android:text="@string/act_detalhe_proposta_labelResumoVotacao"
                android:textSize="@dimen/actDetalheProposta_textSizeLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdLabelAprovar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdLabelResumoVotacao"
                android:layout_marginRight="@dimen/actDetalheProposta_espacamento_label_texto"
                android:layout_marginTop="16dp"
                android:text="@string/act_detalhe_proposta_labelAprovar" />

            <TextView
                android:id="@+id/tvIdAprovar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvIdLabelAprovar"
                android:layout_toEndOf="@+id/tvIdLabelAprovar"
                android:layout_toRightOf="@+id/tvIdLabelAprovar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIdLabelRejeitar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvIdLabelAprovar"
                android:layout_marginRight="@dimen/actDetalheProposta_espacamento_label_texto"
                android:layout_marginTop="11dp"
                android:text="@string/act_detalhe_proposta_labelRejeitar" />

            <TextView
                android:id="@+id/tvIdRejeitar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tvIdLabelRejeitar"
                android:layout_toEndOf="@+id/tvIdLabelRejeitar"
                android:layout_toRightOf="@+id/tvIdLabelRejeitar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.joanzapata.iconify.widget.IconButton
                android:id="@+id/btnIdAtualizarVotos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvIdLabelResumoVotacao"
                android:background="@drawable/blue_button"
                android:onClick="atualizarTotalVotos"
                android:text="Atualizar"
                android:textColor="@android:color/white"
                android:textSize="24sp" />


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
