<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".actCadastro">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_tela_validacao_msg" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/etCodigoVerificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMensagem"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp"
            android:ems="10"
            android:hint="XXX-XXX"
            android:inputType="number"
            android:textAlignment="center"
            app:mask="###-###" />

        <Button
            android:id="@+id/btnReEnviarEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etCodigoVerificacao"
            android:layout_marginTop="82dp"
            android:background="@drawable/green_button"
            android:onClick="reenviar"
            android:text="@string/act_tela_validacao_bnt_reenviarEmail" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_button"
            android:onClick="confirmar"
            android:text="@string/act_tela_validacao_bnt_confirmar" />

    </RelativeLayout>


</ScrollView>